# ml2_trabalhos_2026

./: .gitignore  README.md  activate  colab_setup.ipynb  pyproject.toml  requirements.txt
examples/: mnist.ipynb  pytorch-intro.ipynb  spiral.ipynb  visualizacao_features_cnn.ipynb
src/: util.py
trabalho_2/: image_captioning.ipynb
